# renderfact

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-pypi.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  doctor.py  pandoc_markdown.py  pyproject.toml  render.py  renderfact-models.toml.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: app.py  store.py  templates.py  ui.py
container/: Containerfile  README.md  build.sh  bundle-annex-linux.py  puppeteer-config.json  render  render-doc.sh  verify-pins.sh
contracts/: confidence_gate.py  copy_paste.py  direct_api.py  gate_telemetry.py  init_ai.py  model_config.py  schema_utils.py
demo/: README.md  profiles.yaml  render-demo.sh
docs/: 2026-07-03-d8-copy-paste-design-spike.md  2026-07-03-editor-design-spike.md  2026-07-04-fuzzy-gate-architecture-plan.md  2026-07-05-cv-cover-letter-design-spec.md  2026-07-07-ui-ux-project-workspace-design-spike.md  2026-07-12-fidelity-cluster-implementation-plan.md  ARCHITECTURE.md  DECISIONS.md  README.md  ROADMAP.md  capabilities.md  prior-art-diagram-roundtrip.md  prior-art-paperbanana-prompt-patterns.md  prior-art-template-analysis.md
docstyle/: custom_properties.py  docx_pipeline.py  heading_numbering.py  marking_lint.py  marking_patterns.py  ooxml_theme.py  plain_language.py  style_postprocess.py  template-profile-example.yaml  template_import.py  zip_determinism.py
gates/: authoring-artifact-patterns.example.txt  content_scan.py  idempotency.py  run_gates.py
lint/: archimate_exchange.py  comprehension_review_contract.py  element_budget.py  layered_stack.py  mermaid_source.py  patch_svg_a11y.py  render.py  render_qa.py  render_svg_pdf.py  svg_metrics.py  vision_review_contract.py  visual_quality.py
mail/: eml_backend.py  signature-example.yaml
pdf/: locale_fmt.py  statement_data.py  typst_backend.py
projection/: profiles-example.yaml  projector.py
roundtrip/: contextualize.py  decision_capture.py  dossier_role.py  drawio.py  provenance.py  reingest.py  source_uid.py  visio.py
scripts/: check_wiki_sync.py  generic_gate.py
templates/: README.md  cover-letter.md  cv.md  executive-summary.md  external-party-brief.md  pitch-1pager.md  pitch-5pager.md  purchase-request.md
tests/: test_api.py  test_api_docx.py  test_api_render.py  test_api_service.py  test_archimate_exchange.py  test_check_wiki_sync.py  test_comprehension_review.py  (+52 more)
(+61 files in other folders)
